--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.yangyang5214.com.yangyang5214.mergefit.App</mainClass>
+                                    <mainClass>com.yangyang5214.mergefit.App</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -69,7 +69,7 @@
                     <archive>
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            <mainClass>com.yangyang5214.com.yangyang5214.mergefit.App</mainClass>
+                            <mainClass>com.yangyang5214.mergefit.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
